tests/NormalTests/paczka1/fuzzy1/80034678.err
Error in line 3: IXnB S204 69,5
Error in line 1: A821 A821 1,0
Error in line 7: IXnB A821 87,6
Error in line 20: A821 S298 52,6
Error in line 18: KMsVm A821 59,4
Error in line 34: IXnB S204 15,3
